--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title></title>
 </head>
 <body>
+    <h1>Imageboard</h1>
+    <main id="main">
+          <ul v-for="(image) in images">
+            <div><img :src="image.url" :alt="image.description"> </div>
+            <div>{{image.title}}</div>
+        </ul>
+    </main>
     <script src="/js/app.js" type="module" crossorigin="use-credentials"></script>
 </body>
 </html>
