--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
 </head>
 <body>
     <h1>Imageboard</h1>
-    <main id="main">
-          <ul v-for="(image) in images">
-            <div><img :src="image.url" :alt="image.description"> </div>
-            <div>{{image.title}}</div>
-        </ul>
+    <main id="main" >
+      <!-- Upload element -->
+      <h2>Upload your images here</h2>
+      <input v-model="title" name="title">
+        <input name="username">
+        <input
+            name="file"
+            type="file"
+            accept="image/*"
+            @change="setFile"
+       id="input3" >
+        <button v-on:click="upload">Submit</button>
+          <!-- Images -->
+      <div class="grid-element">
+          <div v-for="image in images">
+            <img :src="image.url" :alt="image.description"> 
+            <h2>{{image.title}}</h2>
+          </div>
+        </div>
     </main>
     <script src="/js/app.js" type="module" crossorigin="use-credentials"></script>
 </body>
