Add half of the part 4

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <!-- Upload element -->
       <h2>Upload your images here</h2>
       <!-- SHORTHAND FOR V-BIND is ":" -->
-      <!-- ANOTHER Vue DIRECTIVES : V-MODULE for input fields,  V-ON to add event handlers(like mouse events)-->
+      <!-- ANOTHER Vue DIRECTIVES : V-MODEL for input fields,  V-ON to add event handlers(like mouse events)-->
       <input v-model="title" name="title" placeholder="title">
         <input v-model="username" name="username" placeholder="username">
-        <input v-model="desc" name="desc" placeholder="description">
+        <input v-model="description" name="description" placeholder="description">
         <input
             name="file"
             type="file"
@@ -39,3 +39,9 @@
      <script src="/js/main.js" type="module" crossorigin="use-credentials"></script>
 </body>
 </html>
+
+
+
+
+
+
