--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
         </div>
         <!-- Component -->
-         <my-modal v-if="open" :id="selectedImageId" @close="closeModal"></my-modal>
+         <my-modal v-if="open" :id="selectedImageId" @close="closeModal" @previous="previousImg" @next="nextImg"></my-modal>
    <!-- Component -->
 
    <div><button v-if="loadmore" @click="load">MORE</button></div>
